media/css/main.css
/* ... */
#pgContentWrap span.newstag a i.fa {
    color: var(--pgcontent-span-newstag-fg-color);
}
#pgContentWrap div.newsdate span.badge i.fa {
    color: var(--pgcontent-span-newsdatefg-color);
}
#pgContentWrap div.newstags {
    padding-bottom: 3rem;
}

/* Downloads/products */

.btn-download {
  border-color: var(--btn-download-bdr-color);
  border-width: 2px;
  color: var(--btn-download-fg-color) !important;
  background-color: var(--btn-download-bg-color);
}

.btn-download:hover {
  background-color: var(--btn-download-decoration-bg-color);
  border-color: var(--btn-download-decoration-bdr-color);
}

.btn-download-active {
  background-color: var(--btn-download-active-bg-color);
}

.download-subnav {
  display: none;
}

table.product-table thead tr th:nth-child(1) {
  width: 60%;
}
table.product-table thead tr th:nth-child(2) {
  width: 10%;
}
table.product-table thead tr th:nth-child(3) {
  width: 10%;
}
table.product-table thead tr th:nth-child(4) {
  width: 20%;
}

/* Downloads // yum */
li#dnfmodule {
  display: none;
}

/* Professional servies */
table.profserv-table tbody tr th {
  width: 20%;
}

/* Sponsors */
table.sponsor-table tbody tr th {
  width: 20%;
}
table.sponsor-table tbody tr td:nth-child(2) {
  width: 50%;
}
table.sponsor-table tbody tr td:nth-child(3) {
  width: 30%;
}

/**
* This sets the rule for the rendering in the sponsors table. The name is chosen
* to ensure compatibility with various browser plugins that may otherwise hide
* images.
**/
img.organisation-logo {
  max-height: 65px;
  max-width: 150px;
}
th.organisation-logo {
  height: 65px;
  width: 150px;
  background-color: white !important;
  text-align: center;
}

/** Release Notes */
#release-notes .navheader,
#release-notes .navfooter,
#release-notes .NAVHEADER,
#release-notes .NAVFOOTER,
#release-notes .titlepage,
#release-notes h1.SECT1,
#release-notes .toc {
  display: none;
}

#release-notes .version-list h2:after {
  content: none;
}

details.release-notes-list ul {
  list-style-type: none;
}

details.release-notes-list {
  margin-bottom: 0.3rem;
}

/* Moderation preview */
.moderation-mdpreview-wrap {
    max-width: 650px;
}

.moderation-preview-iframe {
    width: 100%;
    min-height: 400px;
    border: 1px solid var(--button-input-bdr-color);
    border-radius: 5px;
    background-color: #fff;
}

/* Buttons that are images */
button.imagebutton {
    border: 0;
    padding: 0;
}


/** ALL RESPONSIVE QUERIES HERE */
/* Small devices (landscape phones, 576px and up)*/

@media (max-width: 1280px) {
  input#q {
    display: none;
  }
   #docSearchForm input#q {
    display: block;
  }
}

@media (max-width: 992px) {
  .archive {
    margin-top: 2rem;
  }
  .navbar {
    padding: 5px 10px;
  }
  .navbar-toggler-icon {
    width: 1rem;
    height: 1.5rem;
  }
  #docContent table.table {
    font-size: 70%;
  }
}

@media (max-width: 768px) {

  .jumbotron.jumbotron-fluid.pg-jumbotron {
    padding: 4em;
  }

  .pg-jumbotron .btn, button.btn.btn-primary {
    margin: 5px auto;
  }

  .text {
    height: initial;
  }

  .cta-text {
    padding: 4em;
  }

  .cta {
    padding: 6em;
  }

  ul.divided, ul.menu, #footer ul {
    padding: 0;
    text-align: center;
  }

  ul.feature {
    padding: 0 0 1em 0 !important;
  }

  .feature-grid {
    padding: 0;
  }

  #pgSideNav {
    padding: 1em 0;
  }

  #pgSideNav ul {
    padding: 0;
    margin: 1em 0 0 1em;
  }

  #pgSideNav ul ul {
    margin: 0;
  }

  #pgContentWrap {
    padding: 0;
  }

  #pgContentWrap ul {
    padding-left: 1em;
  }

  #docContent table.table {
    font-size: 50%;
  }

}

@media (min-width: 576px) {
  /** NAVBAR */
  .nav-item > a {
    font-size: 0.95rem;
  }
}
@media (max-width: 575px) {
  /** HOMEPAGE JUMBOTRON */
  .pg-jumbotron-header {
    font-size: 1.5rem;
  }

  .btn-double-width {
    width: 18em;
  }
}

/* Script copy buttons */
.pg-script-container {
  position: relative;
}

.pg-script-copy-btn {
  position: absolute;
  top: 8px;
  right: 8px;
}

.nobr {
  white-space: nowrap;
}

